@@ -1,26 +1,31 @@
 package like_lion.pangjam.utility;
 
 import like_lion.pangjam.domain.Location;
-import like_lion.pangjam.domain.LocationReview;
 import like_lion.pangjam.dto.location.LocationResponseDto;
-import like_lion.pangjam.repository.LocationReviewRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Component
+@RequiredArgsConstructor
 public class LocationConverter {
 
-    private static LocationReviewRepository locationReviewRepository;
-
-    public static LocationResponseDto toLocationResponseDTO(List<Location> locations) {
-        List<LocationResponseDto.LocationInfo> locationInfos = locations.stream()
-                .map(LocationResponseDto.LocationInfo::from)
-                .toList();
-
-        return new LocationResponseDto(locationInfos);
+    public static LocationResponseDto toLocationResponseDto(List<Location> locations) {
+        return LocationResponseDto.builder()
+                .locations(locations.stream()
+                        .map(LocationResponseDto.LocationInfo::from)
+                        .collect(Collectors.toList()))
+                .build();
     }
 
-    public static LocationResponseDto.Detail toDetailDTO(Location location) {
-        List<LocationReview> locationReviews = locationReviewRepository.findTop5ByLocation_LocationIdOrderByCreatedAtDesc(location.getLocationId());
-        return LocationResponseDto.Detail.from(location,locationReviews);
+    public static LocationResponseDto.LocationInfo toLocationInfo(Location location) {
+        return LocationResponseDto.LocationInfo.builder()
+                .locationId(location.getLocationId())
+                .name(location.getName())
+                .category(location.getCategory())
+                .averageRating(location.getAverageRating())
+                .build();
     }
 }
